# rag_tunning

./: .gitignore  LICENSE  README.md  func_call_todb.py  func_example.py  llm_agent.ipynb  pyproject.toml  rag_test.ipynb  rag_test_2.ipynb  test-api.http  tets.py  web-qa.ipynb  web-qa.py
collibra_rag/: collibra_rag.py
genai/: genai_auth.py  genai_call_todb.py  llama_index_example.py  llama_index_load_json.py  mygenassist_api.ipynb  openia.py  openia_emb.py
processed/: scraped.csv
